# clings

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
clings-macros/: Cargo.toml  info.toml
clings-macros/src/: lib.rs
dev/: Cargo.toml  clings-repo.txt
exercises/00_intro/: README.md  intro1.c  intro2.c
exercises/01_variables/: README.md  variables1.c  variables2.c  variables3.c  variables4.c  variables5.c  variables6.c  variables7.c
exercises/02_functions/: functions1.c  functions3.c  functions4.c
exercises/02_operators/: operators1.c  operators2.c  operators3.c  operators4.c
exercises/03_if/: README.md  if1.c  if2.c
exercises/04_loops/: README.md  loops1.c  loops2.c
exercises/05_functions/: README.md  functions1.c  functions2.c  functions5.c  functions6.c
exercises/06_arrays/: arrays1.c  arrays2.c  arrays3.c  arrays4.c
exercises/07_pointers/: pointers1.c  pointers2.c  pointers3.c
rustlings-macros/: info.toml
solutions/: README.md
solutions/00_intro/: intro1.c  intro2.c
solutions/01_variables/: variables1.c  variables2.c  variables3.c  variables4.c  variables5.c  variables6.c  variables7.c
solutions/02_functions/: functions1.c  functions2.c  functions3.c  functions4.c
solutions/02_operators/: operators1.c  operators2.c  operators3.c  operators4.c
solutions/03_if/: if1.c  if2.c
solutions/04_loops/: loops1.c  loops2.c
solutions/05_functions/: functions5.c  functions6.c
solutions/06_arrays/: arrays1.c  arrays2.c  arrays3.c
solutions/07_pointers/: pointers1.c  pointers2.c  pointers3.c
src/: app_state.rs  cargo_toml.rs  cmd.rs  dev.rs  embedded.rs  exercise.rs  info_file.rs  init.rs  main.rs  watch.rs
src/dev/: check.rs
src/watch/: notify_event.rs
tests/: integration_tests.rs
website/: config.toml
website/content/: _index.md
website/content/setup/: index.md
website/content/usage/: index.md
website/templates/: base.html  index.html
