# Don't edit the `bin` list manually! It is updated by `cargo dev update`. This comment line will be stripped in `clings init`.
bin = [
  { name = "intro1", path = "../exercises/00_intro/intro1.c" },
  { name = "intro1_sol", path = "../solutions/00_intro/intro1.c" },
  { name = "intro2", path = "../exercises/00_intro/intro2.c" },
  { name = "intro2_sol", path = "../solutions/00_intro/intro2.c" },
  { name = "variables1", path = "../exercises/01_variables/variables1.c" },
  { name = "variables1_sol", path = "../solutions/01_variables/variables1.c" },
  { name = "variables2", path = "../exercises/01_variables/variables2.c" },
  { name = "variables2_sol", path = "../solutions/01_variables/variables2.c" },
  { name = "variables3", path = "../exercises/01_variables/variables3.c" },
  { name = "variables3_sol", path = "../solutions/01_variables/variables3.c" },
  { name = "variables3", path = "../exercises/01_variables/variables3.c" },
  { name = "variables3_sol", path = "../solutions/01_variables/variables3.c" },
  { name = "variables4", path = "../exercises/01_variables/variables4.c" },
  { name = "variables4_sol", path = "../solutions/01_variables/variables4.c" },
  { name = "variables5", path = "../exercises/01_variables/variables5.c" },
  { name = "variables5_sol", path = "../solutions/01_variables/variables5.c" },
  { name = "variables6", path = "../exercises/01_variables/variables6.c" },
  { name = "variables6_sol", path = "../solutions/01_variables/variables6.c" },
  { name = "operators1", path = "../exercises/02_operators/operators1.c" },
  { name = "operators1_sol", path = "../solutions/02_operators/operators1.c" },
  { name = "operators2", path = "../exercises/02_operators/operators2.c" },
  { name = "operators2_sol", path = "../solutions/02_operators/operators2.c" },
  { name = "operators3", path = "../exercises/02_operators/operators3.c" },
  { name = "operators3_sol", path = "../solutions/02_operators/operators3.c" },
  { name = "operators4", path = "../exercises/02_operators/operators4.c" },
  { name = "operators4_sol", path = "../solutions/02_operators/operators4.c" },
  { name = "if1", path = "../exercises/03_if/if1.c" },
  { name = "if1_sol", path = "../solutions/03_if/if1.c" },
  { name = "if2", path = "../exercises/03_if/if2.c" },
  { name = "if2_sol", path = "../solutions/03_if/if2.c" },
  { name = "loops1", path = "../exercises/04_loops/loops1.c" },
  { name = "loops1_sol", path = "../solutions/04_loops/loops1.c" },
  { name = "loops2", path = "../exercises/04_loops/loops2.c" },
  { name = "loops2_sol", path = "../solutions/04_loops/loops2.c" },
  { name = "functions1", path = "../exercises/05_functions/functions1.c" },
  { name = "functions1_sol", path = "../solutions/05_functions/functions1.c" },
  { name = "functions2", path = "../exercises/05_functions/functions2.c" },
  { name = "functions2_sol", path = "../solutions/05_functions/functions2.c" },
  { name = "functions3", path = "../exercises/05_functions/functions3.c" },
  { name = "functions3_sol", path = "../solutions/05_functions/functions3.c" },
  { name = "functions4", path = "../exercises/05_functions/functions4.c" },
  { name = "functions4_sol", path = "../solutions/05_functions/functions4.c" },
  { name = "functions5", path = "../exercises/05_functions/functions5.c" },
  { name = "functions5_sol", path = "../solutions/05_functions/functions5.c" },
  { name = "functions6", path = "../exercises/05_functions/functions6.c" },
  { name = "functions6_sol", path = "../solutions/05_functions/functions6.c" },
  { name = "arrays1", path = "../exercises/06_arrays/arrays1.c" },
  { name = "arrays1_sol", path = "../solutions/06_arrays/arrays1.c" },
  { name = "arrays2", path = "../exercises/06_arrays/arrays2.c" },
  { name = "arrays2_sol", path = "../solutions/06_arrays/arrays2.c" },
  { name = "arrays3", path = "../exercises/06_arrays/arrays3.c" },
  { name = "arrays3_sol", path = "../solutions/06_arrays/arrays3.c" },
  { name = "arrays4", path = "../exercises/06_arrays/arrays4.c" },
  { name = "arrays4_sol", path = "../solutions/06_arrays/arrays4.c" },
  { name = "pointers1", path = "../exercises/07_pointers/pointers1.c" },
  { name = "pointers1_sol", path = "../solutions/07_pointers/pointers1.c" },
  { name = "pointers2", path = "../exercises/07_pointers/pointers2.c" },
  { name = "pointers2_sol", path = "../solutions/07_pointers/pointers2.c" },
  { name = "pointers3", path = "../exercises/07_pointers/pointers3.c" },
  { name = "pointers3_sol", path = "../solutions/07_pointers/pointers3.c" },
]

[package]
name = "exercises"
edition = "2024"
# Don't publish the exercises on crates.io!
publish = false

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[lints.rust]
# You shouldn't write unsafe code in Rustlings!
unsafe_code = "forbid"
# You don't need unstable features in Rustlings and shouldn't rely on them while learning Rust.
unstable_features = "forbid"
# Dead code warnings can't be avoided in some exercises and might distract while learning.
dead_code = "allow"

[lints.clippy]
# You forgot a `todo!()`!
todo = "forbid"
# This can only happen by mistake in Rustlings.
empty_loop = "forbid"
# No infinite loops are needed in Rustlings.
infinite_loop = "deny"
# You shouldn't leak memory while still learning Rust!
mem_forget = "deny"
# Currently, there are no disallowed methods. This line avoids problems when developing Rustlings.
disallowed_methods = "allow"
